# ChorusExMachina

./: Cargo.toml  README.md
.github/readmes/: README-Linux.txt  README-Mac.txt  README-Windows.txt
.github/workflows/: build.yml
au/: CMakeLists.txt  README.md
chorus/: Cargo.toml  README.md
chorus/src/: director.rs  exciter.rs  filter.rs  lib.rs  phonemes.rs  random.rs  resampler.rs  reverb.rs  syllable.rs  voice.rs
chorus/src/consonants/alto/: 40.flac  41.flac  42.flac  43.flac  44.flac  45.flac  46.flac  47.flac  48.flac  49.flac  b0.flac  b1.flac  b2.flac  b3.flac  b4.flac  b5.flac  b6.flac  b7.flac  b8.flac  b9.flac  d0.flac  d1.flac  d2.flac  d3.flac  d4.flac  d5.flac  d6.flac  d7.flac  d8.flac  d9.flac  g0.flac  g1.flac  g2.flac  g3.flac  g4.flac  g5.flac  g6.flac  g7.flac  g8.flac  g9.flac  (+30 more)
chorus/src/consonants/bass/: 40.flac  41.flac  42.flac  43.flac  44.flac  45.flac  46.flac  47.flac  48.flac  49.flac  b0.flac  b1.flac  b2.flac  b3.flac  b4.flac  b5.flac  b6.flac  b7.flac  b8.flac  b9.flac  d0.flac  d1.flac  d2.flac  d3.flac  d4.flac  d5.flac  d6.flac  d7.flac  d8.flac  d9.flac  g0.flac  g1.flac  g2.flac  g3.flac  g4.flac  g5.flac  g6.flac  g7.flac  g8.flac  g9.flac  (+30 more)
chorus/src/consonants/soprano/: 40.flac  41.flac  42.flac  43.flac  44.flac  45.flac  46.flac  47.flac  48.flac  49.flac  b0.flac  b1.flac  b2.flac  b3.flac  b4.flac  b5.flac  b6.flac  b7.flac  b8.flac  b9.flac  d0.flac  d1.flac  d2.flac  d3.flac  d4.flac  d5.flac  d6.flac  d7.flac  d8.flac  d9.flac  g0.flac  g1.flac  g2.flac  g3.flac  g4.flac  g5.flac  g6.flac  g7.flac  g8.flac  g9.flac  (+30 more)
chorus/src/consonants/tenor/: 40.flac  41.flac  42.flac  43.flac  44.flac  45.flac  46.flac  47.flac  48.flac  49.flac  b0.flac  b1.flac  b2.flac  b3.flac  b4.flac  b5.flac  b6.flac  b7.flac  b8.flac  b9.flac  d0.flac  d1.flac  d2.flac  d3.flac  d4.flac  d5.flac  d6.flac  d7.flac  d8.flac  d9.flac  g0.flac  (+39 more)
chorus/src/resonance/: alto-resonance.flac  bass-resonance.flac  soprano-resonance.flac  tenor-resonance.flac
chorus/tests/: test_filter.rs  test_random.rs  test_resampler.rs  test_reverb.rs  test_syllable.rs
player/: Cargo.toml
player/src/: main.rs
plugin/: Cargo.toml  README.md  bundler.toml
plugin/src/: editor.rs  help.md  lib.rs  main.rs
src/: director.rs  filter.rs  lib.rs  main.rs  phonemes.rs  random.rs  syllable.rs  synth.rs  voice.rs
tests/: test_filter.rs  test_syllable.rs
vowel_designer/: Cargo.toml  README.md
vowel_designer/src/: main.rs
xtask/: Cargo.toml
