[package]
name = "chorus_ex_machina"
version = "0.6.0"
edition = "2021"
homepage = "https://github.com/peastman/ChorusExMachina"
description = "A physically modelled chorus synthesizer"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chorus = { path = "../chorus" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui_extras = "0.27.2"
egui_commonmark = "0.16.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
