[package]
name = "chorus_ex_machina"
version = "0.8.0"
edition = "2021"
homepage = "https://github.com/peastman/ChorusExMachina"
description = "A physically modelled chorus synthesizer"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chorus = { path = "../chorus" }
nih_plug = { git = "https://github.com/peastman/nih-plug.git", rev = "980290b3b91696d9038f2d9ba463128a8657c21c", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/peastman/nih-plug.git", rev = "980290b3b91696d9038f2d9ba463128a8657c21c" }
egui_extras = "0.31.0"
egui_commonmark = "0.20.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
